Fix Numbers size on mobile

--- a/src/Home.css
+++ b/src/Home.css
@@ -158,15 +158,15 @@ a.right {
         display: none;
     }
     .stats-value {
-        font-size: 3.5em;
+        font-size: 3.5em !important;
     }
     /* 4 Number */
     .stats-value4 {
         width: 60%;
     }
     .stats-desc {
-        padding-left: 10px;
-        font-size:.7em;
+        padding-left: 10px !important;
+        font-size:.7em !important;
     }
     .stats-unit {
         display: block;
